--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Site settings 配置站点
-title: 'Redlotus's blog
+title: 'Redlotus's blog'
 description: '灵感之源'
-keyword: '设计，灵感，前段'
+keyword: '设计，灵感，iOS'
 url: 'https://xiaowinner.github.io' # your host
-baseurl: '/'
-
+baseurl: 'https://xiaowinner.github.io'
 # Navigation links
 nav:
   home: '/'
@@ -31,7 +30,7 @@ social-share: true
 social-share-items: ['wechat', 'weibo', 'douban', 'twitter']
 
 # theme color 主题皮肤
-theme-color: 'default'  # pink or default
+theme-color: 'pink'  # pink or default
 
 # Post header background patterns (when the post no cover): circuitBoard, overlappingCircles, food, glamorous, ticTacToe, seaOfClouds
 postPatterns: 'circuitBoard'
