--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ nav:
 author: '原晓文'
 nickname: 'Redlotus'
 bio: 'iOS开发者，热爱技术&设计，简单乐观爱创造'
-avatar: 'assets/img/profile.png'
+avatar: 'assets/img/profile.jpeg'
 
 # Search
 search: true
@@ -30,7 +30,7 @@ social-share: true
 social-share-items: ['wechat', 'weibo', 'douban', 'twitter']
 
 # theme color 主题皮肤
-theme-color: 'pink'  # pink or default
+theme-color: 'default'  # pink or default
 
 # Post header background patterns (when the post no cover): circuitBoard, overlappingCircles, food, glamorous, ticTacToe, seaOfClouds
 postPatterns: 'circuitBoard'
