--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site settings 配置站点
-title: 'Redlotus blog'
+title: 'RedLotus blog'
 description: ''
 keyword: '设计，灵感，iOS'
 url: 'https://xiaowinner.github.io' # your host
 baseurl: '/'
 # Navigation links
-    nav:
+  nav:
   home: '/'
   tags: '/tags.html'
 
 # Author 配置博主信息
 author: '原晓文'
-nickname: 'Redlotus'
+nickname: 'RedLotus'
 bio: 'iOS开发者'
 avatar: 'assets/img/profile.jpeg'
 
